--- a/TowerOfDaedelus_WebApp/Properties/launchSettings.json
+++ b/TowerOfDaedelus_WebApp/Properties/launchSettings.json
@@ -14,6 +14,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "DISCORD_CLIENT_ID": "931628451612475472",
+        "SENDGRID_API_KEY": "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",
         "DISCORD_CLIENT_SECRET": "pHbZM2CucUGk2CwXJT72dGjyqdBsr21e"
       },
       "applicationUrl": "https://localhost:7284;http://localhost:5284",
@@ -25,6 +26,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "DISCORD_CLIENT_ID": "931628451612475472",
+        "SENDGRID_API_KEY": "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",
         "DISCORD_CLIENT_SECRET": "pHbZM2CucUGk2CwXJT72dGjyqdBsr21e"
       }
     }
