--- a/TowerOfDaedalus_WebApp_DiscordBot/TowerOfDaedalus_WebApp_DiscordBot.csproj
+++ b/TowerOfDaedalus_WebApp_DiscordBot/TowerOfDaedalus_WebApp_DiscordBot.csproj
@@ -1,20 +1,24 @@
 <Project Sdk="Microsoft.NET.Sdk.Worker">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>dotnet-TowerOfDaedalus_WebApp_DiscordBot-7EB9A3C4-DF64-406E-B5C3-0C40D6F07820</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
+    <AnalysisLevel>latest</AnalysisLevel>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Discord.Net" Version="3.4.1" />
-    <PackageReference Include="Discord.Net.Commands" Version="3.4.1" />
-    <PackageReference Include="Discord.Net.Core" Version="3.4.1" />
-    <PackageReference Include="Discord.Net.Rest" Version="3.4.1" />
-    <PackageReference Include="Discord.Net.Webhook" Version="3.4.1" />
-    <PackageReference Include="Discord.Net.WebSocket" Version="3.4.1" />
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
+    <PackageReference Include="Discord.Net" Version="3.8.1" />
+    <PackageReference Include="Discord.Net.Commands" Version="3.8.1" />
+    <PackageReference Include="Discord.Net.Core" Version="3.8.1" />
+    <PackageReference Include="Discord.Net.Rest" Version="3.8.1" />
+    <PackageReference Include="Discord.Net.Webhook" Version="3.8.1" />
+    <PackageReference Include="Discord.Net.WebSocket" Version="3.8.1" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
   </ItemGroup>
 
   <ItemGroup>
