--- a/TowerOfDaedalus_WebApp_Tests/TowerOfDaedalus_WebApp_Tests.csproj
+++ b/TowerOfDaedalus_WebApp_Tests/TowerOfDaedalus_WebApp_Tests.csproj
@@ -23,6 +23,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TowerOfDaedalus_WebApp_Arango\TowerOfDaedalus_WebApp_Arango.csproj" />
+    <ProjectReference Include="..\TowerOfDaedalus_WebApp_Blazor\TowerOfDaedalus_WebApp_Blazor.csproj" />
+    <ProjectReference Include="..\TowerOfDaedalus_WebApp_DiscordBot\TowerOfDaedalus_WebApp_DiscordBot.csproj" />
+    <ProjectReference Include="..\TowerOfDaedalus_WebApp_Razor\TowerOfDaedalus_WebApp_Razor.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="log4net.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
