--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,7 +1,16 @@
 version: '3.4'
 
 services:
-  towerofdaedelus_webapp:
+  towerofdaedalus_webapp_razor:
+    image: ${DOCKER_REGISTRY-}towerofdaedaluswebapprazor
+    build:
+      context: .
+      dockerfile: TowerOfDaedalus_WebApp_Razor/Dockerfile
+    depends_on:
+        - arangodb
+        - zookeeper
+        - kafka
+        - towerofdaedalus_webapp_discordbot
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=https://+:443;http://+:80
@@ -11,19 +20,69 @@ services:
     volumes:
       - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
       - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
+
+  towerofdaedalus_webapp_blazor:
+    image: ${DOCKER_REGISTRY-}towerofdaedaluswebappblazor
+    build:
+      context: .
+      dockerfile: TowerOfDaedalus_WebApp_Blazor/Dockerfile
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=https://+:443;http://+:80
+    ports:
+      - "80"
+      - "443"
+    volumes:
+      - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
+      - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
+    depends_on:
+        - arangodb
+        - zookeeper
+        - kafka
+        - towerofdaedalus_webapp_discordbot
+        - towerofdaedalus_webapp_razor
+
   towerofdaedalus_webapp_discordbot:
+    image: ${DOCKER_REGISTRY-}towerofdaedaluswebappdiscordbot
+    build:
+      context: .
+      dockerfile: TowerOfDaedalus_WebApp_DiscordBot/Dockerfile
     environment:
       - DOTNET_ENVIRONMENT=Development
     volumes:
       - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
 
-  towerofdaedalus_webapp_razor:
-    environment:
-      - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_URLS=https://+:443;http://+:80
+  arangodb:
+    image: arangodb:latest
     ports:
-      - "80"
-      - "443"
+        - 8529:8529
+    environment:
+        - ARANGO_NO_AUTH=1
     volumes:
-      - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
-      - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
+        - ./Persistance/Arango:/var/lib/arangodb3
+
+  zookeeper:
+    image: bitnami/zookeeper:latest
+    ports:
+        - 2181:2181
+    environment:
+        - ALLOW_ANONYMOUS_LOGIN=yes
+    volumes:
+        - ./Persistance/zookeeper:/bitnami/zookeeper
+
+  kafka:
+    image: bitnami/kafka:latest
+    ports:
+        - 9092:9092
+    environment:
+      - KAFKA_BROKER_ID=1
+      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://127.0.0.1:9092
+      - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
+      - ALLOW_PLAINTEXT_LISTENER=yes
+    depends_on:
+      - zookeeper
+    volumes:
+      - ./Persistance/Kafka:/bitnami/kafka
+
+
