--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,12 +11,30 @@ services:
         - zookeeper
         - kafka
         - towerofdaedalus_webapp_discordbot
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=https://+:443;http://+:80
+    ports:
+      - "80"
+      - "443"
+    volumes:
+      - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
+      - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
 
   towerofdaedalus_webapp_blazor:
     image: ${DOCKER_REGISTRY-}towerofdaedaluswebappblazor
     build:
       context: .
       dockerfile: TowerOfDaedalus_WebApp_Blazor/Dockerfile
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=https://+:443;http://+:80
+    ports:
+      - "80"
+      - "443"
+    volumes:
+      - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
+      - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
     depends_on:
         - arangodb
         - zookeeper
@@ -29,6 +47,10 @@ services:
     build:
       context: .
       dockerfile: TowerOfDaedalus_WebApp_DiscordBot/Dockerfile
+    environment:
+      - DOTNET_ENVIRONMENT=Development
+    volumes:
+      - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
 
   arangodb:
     image: arangodb:latest
