--- a/TowerOfDaedalus_WebApp_Razor/TowerOfDaedalus_WebApp_Razor.csproj
+++ b/TowerOfDaedalus_WebApp_Razor/TowerOfDaedalus_WebApp_Razor.csproj
@@ -7,6 +7,7 @@
     <UserSecretsId>aspnet-TowerOfDaedalus_WebApp_Razor-b3f898ae-4de7-4772-b7c9-d245a9a5cec0</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
