--- a/TowerOfDaedalus_WebApp_Tests/TowerOfDaedalus_WebApp_Tests.csproj
+++ b/TowerOfDaedalus_WebApp_Tests/TowerOfDaedalus_WebApp_Tests.csproj
@@ -7,6 +7,8 @@
     <IsPackable>false</IsPackable>
 
     <EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
+
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
