fix logging and resolve compilation errors

--- a/TowerOfDaedalus_WebApp_DiscordBot/log4net.config
+++ b/TowerOfDaedalus_WebApp_DiscordBot/log4net.config
@@ -1,32 +1,38 @@
-﻿<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <log4net>
-    <root>
-      <level value="ALL" />
-      <appender-ref ref="console" />
-      <appender-ref ref="file" />
-      <appender-ref ref="DebugAppender"/>
-    </root>
-    <appender name="console" type="log4net.Appender.ConsoleAppender">
+    <!-- Console is set to be a ConsoleAppender-->
+    <appender name="Console" type="log4net.Appender.ConsoleAppender">
+      <!-- Console uses PatternLayout-->
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date %level %logger - %message%newline" />
+        <conversionPattern value="%-4timestamp [%thread] %-5level || %logger %ndc - %message%newline" />
       </layout>
     </appender>
-    <appender name="file" type="log4net.Appender.RollingFileAppender">
-      <file value="myapp.log" />
+
+    <!-- RollingFile is set to be a RollingFileAppender-->
+    <appender name="RollingFile" type="log4net.Appender.RollingFileAppender">
+      <file value="TowerOfDaedalus_Logs.log" />
       <appendToFile value="true" />
-      <rollingStyle value="Size" />
-      <maxSizeRollBackups value="5" />
-      <maximumFileSize value="10MB" />
-      <staticLogFileName value="true" />
+      <maximumFileSize value="100KB" />
+      <maxSizeRollBackups value="2" />
+      <!-- RollingFile uses PatternLayout-->
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date [%thread] %level %logger - %message%newline" />
+        <conversionPattern value="%-4timestamp [%thread] %-5level || %logger %ndc - %message%newline" />
       </layout>
     </appender>
+
+    <!-- DebugAppender is set to be a DebugAppender-->
     <appender name="DebugAppender" type="log4net.Appender.DebugAppender">
+      <!-- DebugAppender uses PatternLayout-->
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date{dd.MM.yyyy HH:mm:ss.ffff} [%thread] %level %logger%exception - %message%newline"/>  
+        <conversionPattern value="%-4timestamp [%thread] %-5level || %logger %ndc %exception - %message%newline" />
       </layout>
     </appender>
+
+    <!-- Set root logger level to DEBUG and set its appenders-->
+    <root>
+      <level value="DEBUG" />
+      <appender-ref ref="Console" />
+    </root>
   </log4net>
 </configuration>
