--- a/TowerOfDaedalus_WebApp_Razor/TowerOfDaedalus_WebApp_Razor.csproj
+++ b/TowerOfDaedalus_WebApp_Razor/TowerOfDaedalus_WebApp_Razor.csproj
@@ -45,4 +45,10 @@
     <ProjectReference Include="..\TowerOfDaedalus_WebApp_Arango\TowerOfDaedalus_WebApp_Arango.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="log4net.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
