--- a/TowerOfDaedalus_WebApp_Blazor/appsettings.json
+++ b/TowerOfDaedalus_WebApp_Blazor/appsettings.json
@@ -4,9 +4,11 @@
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Debug",
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "log4net.Config": "log4net.config",
+  "log4net.Config.Watch": "True",
   "AllowedHosts": "*"
 }
