--- a/TowerOfDaedalus_WebApp_DiscordBot/appsettings.json
+++ b/TowerOfDaedalus_WebApp_DiscordBot/appsettings.json
@@ -1,9 +1,11 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Debug",
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "log4net.Config": "log4net.config",
+  "log4net.Config.Watch": "True",
   "AllowedHosts": "*"
 }
