--- a/TowerOfDaedalus_WebApp_DiscordBot/log4net.config
+++ b/TowerOfDaedalus_WebApp_DiscordBot/log4net.config
@@ -31,7 +31,7 @@
 
     <!-- Set root logger level to DEBUG and set its appenders-->
     <root>
-      <level value="DEBUG" />
+      <level value="TRACE" />
       <appender-ref ref="Console" />
       <appender-ref ref="RollingFile" />
       <appender-ref ref="DebugAppender" />
