--- a/TowerOfDaedalus_WebApp_Blazor/TowerOfDaedalus_WebApp_Blazor.csproj
+++ b/TowerOfDaedalus_WebApp_Blazor/TowerOfDaedalus_WebApp_Blazor.csproj
@@ -29,6 +29,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\TowerOfDaedalus_WebApp_Arango\TowerOfDaedalus_WebApp_Arango.csproj" />
+    <ProjectReference Include="..\TowerOfDaedalus_WebApp_Kafka\TowerOfDaedalus_WebApp_Kafka.csproj" />
   </ItemGroup>
 
   <ItemGroup>
