--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -55,6 +55,7 @@ services:
             - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://127.0.0.1:9092
             - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
             - ALLOW_PLAINTEXT_LISTENER=yes
+            - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=false
         depends_on:
             - zookeeper
         volumes:
