add kafka consumer and producer

--- a/TowerOfDaedalus_WebApp_RESTApi/TowerOfDaedalus_WebApp_RESTApi_Config.yml
+++ b/TowerOfDaedalus_WebApp_RESTApi/TowerOfDaedalus_WebApp_RESTApi_Config.yml
@@ -25,3 +25,9 @@
         networks:
             - daedalus-dev
             - daedalus-data
+        deploy:
+            restart_policy:
+                condition: on-failure
+                delay: 5s
+                max_attempts: 3
+                window: 120s
