--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -33,6 +33,12 @@ services:
             - ./Persistance/Arango:/var/lib/arangodb3
         networks:
             - daedalus-data
+        deploy:
+            restart_policy:
+                condition: on-failure
+                delay: 5s
+                max_attempts: 3
+                window: 120s
 
     zookeeper:
         image: bitnami/zookeeper:latest
@@ -44,6 +50,12 @@ services:
             - ./Persistance/zookeeper:/bitnami/zookeeper
         networks:
             - daedalus-dev
+        deploy:
+            restart_policy:
+                condition: on-failure
+                delay: 5s
+                max_attempts: 3
+                window: 120s
 
     kafka:
         image: bitnami/kafka:latest
@@ -52,7 +64,7 @@ services:
         environment:
             - KAFKA_BROKER_ID=1
             - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092
-            - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://127.0.0.1:9092
+            - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://:9092
             - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
             - ALLOW_PLAINTEXT_LISTENER=yes
             - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=false
@@ -62,6 +74,13 @@ services:
             - ./Persistance/Kafka:/bitnami/kafka
         networks:
             - daedalus-dev
+        deploy:
+            restart_policy:
+                condition: on-failure
+                delay: 5s
+                max_attempts: 3
+                window: 120s
+        
 
 networks:
     daedalus-dev:
