--- a/TowerOfDaedalus_WebApp_Blazor/TowerOfDaedalus_WebApp_Blazor_Config.yml
+++ b/TowerOfDaedalus_WebApp_Blazor/TowerOfDaedalus_WebApp_Blazor_Config.yml
@@ -43,3 +43,9 @@
         networks:
             - daedalus-dev
             - daedalus-data
+        deploy:
+           restart_policy:
+                condition: on-failure
+                delay: 5s
+                max_attempts: 3
+                window: 120s
