--- a/TowerOfDaedalus_WebApp_DiscordBot/TowerOfDaedalus_WebApp_DiscordBot_Config.yml
+++ b/TowerOfDaedalus_WebApp_DiscordBot/TowerOfDaedalus_WebApp_DiscordBot_Config.yml
@@ -31,3 +31,9 @@
         networks:
             - daedalus-dev
             - daedalus-data
+        deploy:
+            restart_policy:
+                condition: on-failure
+                delay: 5s
+                max_attempts: 3
+                window: 120s
