--- a/TowerOfDaedalus_WebApp_Blazor/TowerOfDaedalus_WebApp_Blazor_Config.yml
+++ b/TowerOfDaedalus_WebApp_Blazor/TowerOfDaedalus_WebApp_Blazor_Config.yml
@@ -23,6 +23,7 @@
           - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
           - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
           - ../Persistance/Logs:/var/opt/Logs
+          - ../Persistance/Containers/Blazor/DataProtection-Keys:/root/.aspnet/DataProtection-Keys
         depends_on:
             arangodb:
                 condition: service_started
