--- a/TowerOfDaedalus_WebApp_Razor/appsettings.Development.json
+++ b/TowerOfDaedalus_WebApp_Razor/appsettings.Development.json
@@ -3,7 +3,7 @@
   "Logging": {
     "LogLevel": {
       "Default": "Trace",
-      "Microsoft.AspNetCore": "Trace"
+      "Microsoft.AspNetCore": "Warning"
     }
   }
 }
